@@ -8,23 +8,19 @@ import com.simibubi.create.content.processing.recipe.ProcessingOutput;
 import com.simibubi.create.content.processing.recipe.ProcessingRecipe;
 import com.simibubi.create.foundation.item.ItemHelper;
 
-import net.minecraft.core.component.DataComponents;
 import net.minecraft.world.entity.item.ItemEntity;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Recipe;
-import net.minecraft.world.item.crafting.RecipeHolder;
 import net.minecraft.world.level.Level;
 
 public class RecipeApplier {
-	public static void applyRecipeOn(ItemEntity entity, Recipe<?> recipe) {
-		List<ItemStack> stacks = applyRecipeOn(entity.level(), entity.getItem(), recipe);
-		if (stacks == null)
-			return;
+	public static void applyRecipeOn(ItemEntity entity, Recipe<?> recipe, boolean returnProcessingRemainder) {
+		List<ItemStack> stacks = applyRecipeOn(entity.level(), entity.getItem(), recipe, returnProcessingRemainder);
 		if (stacks.isEmpty()) {
 			entity.discard();
 			return;
 		}
-		entity.setItem(stacks.remove(0));
+		entity.setItem(stacks.removeFirst());
 		for (ItemStack additional : stacks) {
 			ItemEntity entityIn = new ItemEntity(entity.level(), entity.getX(), entity.getY(), entity.getZ(), additional);
 			entityIn.setDeltaMovement(entity.getDeltaMovement());
@@ -32,11 +28,7 @@ public class RecipeApplier {
 		}
 	}
 
-	public static List<ItemStack> applyRecipeOn(Level level, ItemStack stackIn, RecipeHolder<?> recipe) {
-		return applyRecipeOn(level, stackIn, recipe.value());
-	}
-
-	public static List<ItemStack> applyRecipeOn(Level level, ItemStack stackIn, Recipe<?> recipe) {
+	public static List<ItemStack> applyRecipeOn(Level level, ItemStack stackIn, Recipe<?> recipe, boolean returnProcessingRemainder) {
 		List<ItemStack> stacks;
 
 		if (recipe instanceof ProcessingRecipe<?, ?> pr) {
@@ -44,13 +36,13 @@ public class RecipeApplier {
 			for (int i = 0; i < stackIn.getCount(); i++) {
 				List<ProcessingOutput> outputs =
 					pr instanceof ManualApplicationRecipe mar ? mar.getRollableResults() : pr.getRollableResults();
-				for (ItemStack stack : pr.rollResults(outputs)) {
+				for (ItemStack stack : pr.rollResults(outputs, level.random)) {
 					for (ItemStack previouslyRolled : stacks) {
 						if (stack.isEmpty())
 							continue;
 						if (!ItemStack.isSameItemSameComponents(stack, previouslyRolled))
 							continue;
-						int amount = Math.min(previouslyRolled.getOrDefault(DataComponents.MAX_STACK_SIZE, 64) - previouslyRolled.getCount(),
+						int amount = Math.min(previouslyRolled.getMaxStackSize() - previouslyRolled.getCount(),
 							stack.getCount());
 						previouslyRolled.grow(amount);
 						stack.shrink(amount);
@@ -61,6 +53,10 @@ public class RecipeApplier {
 
 					stacks.add(stack);
 				}
+				if (returnProcessingRemainder && stackIn.hasCraftingRemainingItem()) {
+					ItemHelper.addToList(stackIn.getCraftingRemainingItem(), stacks);
+				}
+
 			}
 		} else {
 			ItemStack out = recipe.getResultItem(level.registryAccess())
